Checkin for roc+moz@cs.cmu.edu. Fix flashing background. b=77507 r=waterson sr=attinasi a=blizzard